--- a/Analyzer/Analyzer.csproj
+++ b/Analyzer/Analyzer.csproj
@@ -2,12 +2,38 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-	<LangVersion>preview</LangVersion>
+    <LangVersion>preview</LangVersion>
     <Nullable>enable</Nullable>
+    <EnableNETAnalyzers>true</EnableNETAnalyzers>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <PackageId>BestPracticeAnalyzer</PackageId>
+    <Title>Best Practice Analyzer</Title>
+    <Authors>thinker227</Authors>
+    <Version>1.0.0</Version>
+    <Description>An analyzer for developers complaining about people not following "best practices".</Description>
+    <Copyright>© 2022 thinker227</Copyright>
+    <RepositoryUrl>https://github.com/thinker227/BestPracticeAnalyzer</RepositoryUrl>
+    <PackageTags>Analyzers BestPractice Style</PackageTags>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.2.0"/>
+    <None Include="..\LICENSE">
+      <Pack>true</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\README.md">
+      <Pack>true</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.2.0" />
   </ItemGroup>
 
 </Project>
